build: add NPM publish attributes

--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,18 @@
 {
   "name": "@theforce/angular",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "description": "Angular library for TheForce hand tracking",
+  "keywords": [
+    "theforce",
+    "hand-tracking",
+    "mediapipe",
+    "angular",
+    "gesture-control",
+    "virtual-mouse"
+  ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
