--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,6 +3,8 @@ name: Deploy Docusaurus Documentation to S3
 on: 
   push:
     branches: [main]
+    paths:
+      - 'docs/**'
   workflow_dispatch:
 
 jobs:
@@ -33,13 +35,15 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 # Replace with your desired AWS region
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Deploy to S3
-        run: aws s3 sync build/ s3://theforce.code200.com.br \
-          --delete \
-          --acl public-read
+        run: aws s3 sync build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete --acl public-read
         working-directory: ./docs
+      
+      - name: Ensure bucket is configured as static site
+        run: |
+          aws s3 website s3://${{ secrets.AWS_S3_BUCKET }} --index-document index.html --error-document 404.html
 
       - name: Invalidate CloudFront Cache (Optional)
         run: |
