--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches: [main]
     paths:
+      - '.github/workflows/ci.yml'
       - 'examples/**'
       - 'packages/**'
   pull_request:
     branches: [main]
     paths:
+      - '.github/workflows/ci.yml'
       - 'examples/**'
       - 'packages/**'
 
