--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,14 +56,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
-      - name: Publish to npm
-        run: |
-          cd packages/core && npm publish --access public
-          cd ../react && npm publish --access public
-          cd ../vue && npm publish --access public
-          cd ../angular && npm publish --access public
+      - name: Release
+        run: npm run release
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
