--- a/.github/workflows/deploy-cases.yml
+++ b/.github/workflows/deploy-cases.yml
@@ -14,23 +14,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          cache-dependency-path: 'docs/package-lock.json'
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: ./docs
-
-      - name: Build Docusaurus website
-        run: npm run build
-        working-directory: ./docs
-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -40,7 +23,7 @@ jobs:
 
       - name: Deploy to S3
         run: aws s3 sync build/ s3://theforce-cases.code200.com.br --delete --acl public-read
-        working-directory: ./docs
+        working-directory: ./cases
       
       - name: Ensure bucket is configured as static site
         run: |
