--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theforce/core",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "publishConfig": {
     "access": "public"
   },
@@ -30,11 +30,6 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "test": "jest"
   },
-  "dependencies": {
-    "@mediapipe/camera_utils": "^0.3.1634603088",
-    "@mediapipe/drawing_utils": "^0.3.1634603088",
-    "@mediapipe/hands": "^0.4.1657299676"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.3",
     "eslint": "^8.45.0",
@@ -43,5 +38,9 @@
     "jest-environment-jsdom": "^29.6.2",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6"
+  },
+  "peerDependencies": {
+    "@mediapipe/hands": "^0.4.1675469240",
+    "@mediapipe/camera_utils": "^0.3.1675466862"
   }
 }
